typescript/checker/tests/conformance/interfaces/interfacesExtendingClasses/interfaceExtendingClass.ts.stderr
error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            150,
        ),
        hi: BytePos(
            151,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/interfaces/interfacesExtendingClasses/interfaceExtendingClass.ts:13:5
   |
13 | var i: I;
   |     ^

error: NoCallSignature {
    span: Span {
        lo: BytePos(
            182,
        ),
        hi: BytePos(
            184,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/interfaces/interfacesExtendingClasses/interfaceExtendingClass.ts:15:11
   |
15 | var r2 = i.y();
   |           ^^

error: unimplemented
expand_export_info(Foo)
File: $DIR/tests/conformance/interfaces/interfacesExtendingClasses/interfaceExtendingClass.ts
  --> $DIR/tests/conformance/interfaces/interfacesExtendingClasses/interfaceExtendingClass.ts:18:14
   |
18 | var f: Foo = i;
   |              ^

error: UndefinedSymbol {
    span: Span {
        lo: BytePos(
            227,
        ),
        hi: BytePos(
            228,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/interfaces/interfacesExtendingClasses/interfaceExtendingClass.ts:19:5
   |
19 | i = f;
   |     ^

